bookwyrm-service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-svc
  namespace: bookwyrm
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
      protocol: TCP
      name: http
  selector:
    app: nginx
  type: ClusterIP
  sessionAffinity: "None"
