bookwyrm-service-web.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web-svc
  namespace: bookwyrm
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: web
  type: ClusterIP
  sessionAffinity: "None"
