redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bookwyrm
spec:
  selector: 
    app:  redis
  ports:
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
  type: LoadBalancer
