bookwyrm-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookwyrm-nginx
  namespace: bookwyrm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "80m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"    
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.org/fail-timeout: "10"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/preserve-trailing-slash: "false"
    nginx.org/keepalive: "70"
    #nginx.org/client-max-body-size: 80m
    nginx.ingress.kubernetes.io/configuration-snippet: |
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;  
        proxy_pass_header Server;
  labels: 
     app: nginx
     service: nginx-svc
spec:
    rules:
    - host: books.babb.no
      http:
        paths: 
          - path: /images/
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-svc
                port:
                  number: 8001
          - path: /static/
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-svc
                port:
                  number: 8001
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-svc
                port:
                  number: 8000
